# fast-campus_lecture

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  data_completeness_report.json  pyproject.toml  validate_sampling.py
analysis_comprehensive/: README.md  comprehensive_analysis_report.md
analysis_comprehensive/data/: mimic_analysis_results.json
analysis_death/: README.md  death_analysis_report.md  inconsistent_cases_report.md
analysis_death/data/: death_analysis_results.json  inconsistent_cases_analysis.json  inconsistent_cases_details.csv
analysis_demographic/: README.md  demographic_analysis_report.md
analysis_demographic/data/: demographic_results.json
analysis_detailed/: README.md  detailed_analysis_report.md
analysis_error_evaluation/: README.md  data_matching_errors.md  selection_bias_analysis.md
analysis_icu_los/: README.md  icu_los_analysis_report.md
analysis_icu_los/data/: extraction_summary.json  (+1 more)
analysis_initial_lab/: README.md  WRONG_improved_analysis_report.md  WRONG_individual_columns_analysis_report.md  WRONG_initial_lab_analysis_report.md  WRONG_time_window_analysis_report.md  final_all_itemids_report.md  missing_value_analysis.md
analysis_initial_lab_re/: README.md  initial_lab_analysis_report.md  missing_value_analysis_report.md
analysis_prediction/: README.md
analysis_samplingmethod/: README.md  hosp_extraction_report.md  sampling_methodology_report.md
analysis_tsne/: README.md
xray/: regex_sample.ipynb  revised_dataset_cp949.csv  sample.xlsx  short_text_mimic.xlsx  xray_first.ipynb  xray_second.ipynb  xray_third.ipynb
(+126 files in other folders)
