[project]
name = "fast-campus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.3.1",
    "openai>=1.101.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pytz>=2025.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]
